samples/_failures_safe/1761278238_cdcd4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2ef2bbe.c: In function ‘main’:
./samples/SAFE/__tmp_e2ef2bbe.c:175:12: error: missing terminating " character
  175 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_e2ef2bbe.c:175:5: error: expected expression at end of input
  175 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_e2ef2bbe.c:175:5: error: expected declaration or statement at end of input
